fix scrollbars and add hsr boss

--- a/GenshinTool-SPA/src/app/Genshin/pages/notes-page/notes-page.component.css
+++ b/GenshinTool-SPA/src/app/Genshin/pages/notes-page/notes-page.component.css
@@ -11,14 +11,14 @@
 }
 #calculator_notes-textarea1,
 #calculator_notes-textarea2{
-    height: 417px;
+    height: 487px;
     width: 277px;
 }
 #notes-textarea1,
 #notes-textarea2,
 #notes-textarea3{
     width: 277px; 
-    height: 777px;
+    height: 847px;
     margin-left: 25px;
 }
 
